# adblock-rust-dashboard

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  owned_parsed_line.rs  util.rs
static/: index.html
