[package]
name = "adblock-rust-dashboard"
version = "0.1.0"
authors = ["Anton Lazarev <alazarev@brave.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "^ 0.18"
wasm-bindgen = "^ 0.2"
web-sys = { version = "^ 0.3", features = [ "HtmlAnchorElement" ] }
console_error_panic_hook = "^ 0.1"
base64 = "0.13"

adblock = "^ 0.7"
