[package]
name = "adblock-rust-dashboard"
version = "0.1.0"
authors = ["Anton Lazarev <alazarev@brave.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo-timers = "0.3"
wasm-bindgen = "^ 0.2"
web-sys = { version = "^ 0.3", features = [ "HtmlAnchorElement" ] }
console_error_panic_hook = "^ 0.1"
base64 = "0.13"
serde_json = "^ 1.0"

adblock = { version = "^ 0.8", features = ["css-validation", "content-blocking"] }
