[package]
name = "adblock-rust-dashboard"
version = "0.1.0"
authors = ["Anton Lazarev <alazarev@brave.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.23", features = ["csr"] }
gloo-timers = "0.4"
wasm-bindgen = "^ 0.2"
web-sys = { version = "^ 0.3", features = [ "HtmlAnchorElement" ] }
console_error_panic_hook = "^ 0.1"
base64 = "0.22"
serde_json = "^ 1.0"

adblock = { version = "^ 0.13", features = ["css-validation", "content-blocking"] }
